--- a/public/config.json
+++ b/public/config.json
@@ -56,7 +56,7 @@
 		"execute": {
 			"inArguments": [
 				{
-					"emailAddress":"{{Insider_Contacts_Extension.EmailAddress}}"
+					"emailAddress":"{{Contact.Attribute.Insider_Contacts_Extension.EmailAddress}}"
 				}
 			],
 			"outArguments": [],
