--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"express": "^4.15.2",
 		"jsforce": "^1.7.1",
 		"jsonwebtoken": "^7.4.0",
-		"xmlhttprequest": "1.x.x"
+		"xmlhttprequest": "1.x.x",
+		"jwt-simple": "^0.5.1"
 	},
 	"options": {
 		"salesforce": {
