--- a/public/config.json
+++ b/public/config.json
@@ -20,19 +20,19 @@
 			"url": "https://pushnotifyapp.herokuapp.com/activity/save",
 			"verb": "POST",
 			"body": "",
-			"useJwt": true,
+			"useJwt": true
 		},
 		"publish": {
 			"url": "https://pushnotifyapp.herokuapp.com/activity/publish",
 			"verb": "POST",
 			"body": "",
-			"useJwt": true,
+			"useJwt": true
 		},
 		"validate": {
 			"url": "https://pushnotifyapp.herokuapp.com/activity/validate",
 			"verb": "POST",
 			"body": "",
-			"useJwt": true,
+			"useJwt": true
 		}
 	},
 	"wizardSteps": [
