--- a/public/config.json
+++ b/public/config.json
@@ -53,7 +53,7 @@
 		"execute": {
 			"inArguments": [
 				{
-					"emailAddress":"{{Contact.EmailAddress.EmailAddressl}}"
+					"emailAddress":"{{InteractionDefaults.Email}}"
 				}
 			],
 			"outArguments": [],
